@@ -1,10 +1,10 @@
 package com.cloudstorage.service;
 
-import com.cloudstorage.dto.FileResponse;
 import com.cloudstorage.model.FileEntity;
 import com.cloudstorage.model.User;
 import com.cloudstorage.repository.FileRepository;
-import com.cloudstorage.repository.UserRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -15,10 +15,11 @@ import java.io.IOException;
 import java.nio.file.*;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class FileService {
+
+    private static final Logger log = LoggerFactory.getLogger(FileService.class);
 
     @Value("${storage.path}")
     private String storagePath;
@@ -26,25 +27,13 @@ public class FileService {
     @Autowired
     private FileRepository fileRepository;
 
-    @Autowired
-    private UserRepository userRepository;
-
-    public List<FileResponse> getUserFiles(String login, int limit) {
-        User user = userRepository.findByLogin(login)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
+    public List<FileEntity> getUserFiles(User user, int limit) {
         return fileRepository.findByUserIdOrderByUploadDateDesc(user.getId())
-                .stream()
-                .limit(limit)
-                .map(f -> new FileResponse(f.getFilename(), f.getSize()))
-                .collect(Collectors.toList());
+                .stream().limit(limit).toList();
     }
 
     @Transactional
-    public void uploadFile(String login, MultipartFile file) throws IOException {
-        User user = userRepository.findByLogin(login)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
+    public void uploadFile(User user, MultipartFile file) throws IOException {
         String storageFilename = UUID.randomUUID().toString();
         Path userDir = Paths.get(storagePath, user.getLogin());
         Files.createDirectories(userDir);
@@ -54,10 +43,7 @@ public class FileService {
 
         fileRepository.findByFilenameAndUserId(file.getOriginalFilename(), user.getId())
                 .ifPresent(old -> {
-                    try {
-                        Files.deleteIfExists(Paths.get(old.getFilePath()));
-                    } catch (IOException e) {
-                    }
+                    try { Files.deleteIfExists(Paths.get(old.getFilePath())); } catch (IOException e) {}
                     fileRepository.delete(old);
                 });
 
@@ -72,39 +58,24 @@ public class FileService {
     }
 
     @Transactional
-    public void deleteFile(String login, String filename) {
-        User user = userRepository.findByLogin(login)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
+    public void deleteFile(User user, String filename) {
         FileEntity file = fileRepository.findByFilenameAndUserId(filename, user.getId())
                 .orElseThrow(() -> new RuntimeException("File not found"));
-
-        try {
-            Files.deleteIfExists(Paths.get(file.getFilePath()));
-        } catch (IOException e) {
-        }
+        try { Files.deleteIfExists(Paths.get(file.getFilePath())); } catch (IOException e) {}
         fileRepository.deleteByFilenameAndUserId(filename, user.getId());
     }
 
     @Transactional
-    public void renameFile(String login, String oldFilename, String newFilename) {
-        User user = userRepository.findByLogin(login)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
+    public void renameFile(User user, String oldFilename, String newFilename) {
         FileEntity file = fileRepository.findByFilenameAndUserId(oldFilename, user.getId())
                 .orElseThrow(() -> new RuntimeException("File not found"));
-
         file.setFilename(newFilename);
         fileRepository.save(file);
     }
 
-    public Path getFilePath(String login, String filename) {
-        User user = userRepository.findByLogin(login)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
+    public Path getFilePath(User user, String filename) {
         FileEntity file = fileRepository.findByFilenameAndUserId(filename, user.getId())
                 .orElseThrow(() -> new RuntimeException("File not found"));
-
         return Paths.get(file.getFilePath());
     }
 }
